--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="settings_rescan_triggered">Media Scanner Triggered...</string>
     <string name="settings_rescan_storage">Scan storage %s</string>
     <string name="settings_rescan_finished">Media Scanner finished. It can takes a while before the new files appears (SicmuPlayer needs to be restarted).</string>
-    <string name="settings_rescan_purge">Media Scanner founds a file (%s) does that does not exists: delete it from MediaStore.</string>
+    <string name="settings_rescan_purge">Media Scanner founds a file (%s) that does not exists on file system: delete it from MediaStore ?</string>
 
     <string name="settings_media_button_start_app_title">Media buttons auto start</string>
     <string name="settings_media_button_start_app">Media buttons launch the app if not already started.</string>
