Update app so that it compile on last Android Studio and update targetSdkVersion to 31

--- a/misc/TODO.txt
+++ b/misc/TODO.txt
@@ -83,3 +83,5 @@ setprop persist.sys.language fr;setprop persist.sys.country FR;stop;sleep 5;star
 https://github.com/ddf/Minim/blob/master/src/ddf/minim/analysis/BeatDetect.java
 
 
+# developer google app interface
+https://play.google.com/apps/publish/signup/
