--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
 
     <string name="settings_version">1.4.1</string>
 
+    <string name="permission_needed">The app need read storage permission</string>
+
     <string name="action_settings">Settings</string>
     <string name="advanced_settings_title">Advanced settings</string>
     <string name="action_shake_disabled">Shake off</string>
