--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
 
     <string name="settings_version">1.4.1</string>
 
-    <string name="permission_needed">The app need read storage permission</string>
+    <string name="permission_needed">The app needs read storage permission in order to show songs and play them ! When asked, allow access to photos and multimedia content on your android device.</string>
 
     <string name="action_settings">Settings</string>
     <string name="advanced_settings_title">Advanced settings</string>
