--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
 
     <string name="app_playing">SicMu playing</string>
 
-    <string name="explain_playback_speed">Swipe left/right or bottom/top to decrease/increase speed playback!</string>
+    <string name="explain_playback_speed">Swipe up/down or left/right to decrease/increase speed playback!</string>
 
     <string name="focus_error">Could not get audio focus! Restart the app!</string>
 
