--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,7 +135,7 @@
     <string name="help_start_group">Start playing from a group</string>
     <string name="help_start_group_summary">Long tap on a group to start the first song it contains.</string>
     <string name="help_next_group">Long tap on next</string>
-    <string name="help_next_group_summary">Long top on \'next\' button will start playing next group (same for previous group)</string>
+    <string name="help_next_group_summary">Long tap on \'next\' button will start playing next group (same for previous group)</string>
     <string name="help_unfold_group">Fold / unfold group</string>
     <string name="help_unfold_group_summary">Tap on a group to fold / unfold it.</string>
     <string name="help_scroll">Scroll to current song</string>
