--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,6 +193,9 @@
     <string name="settings_show_filename">Show filename</string>
     <string name="settings_show_filename_summary">Show songs filename (e.g. james_brown_01.mp3) rather than songs title</string>
 
+    <string name="settings_show_remaining_time">Show remaining time</string>
+    <string name="settings_show_remaining_time_summary">Show songs remaining time rather than elapsed time</string>
+
     <string name="action_repeat_title">Repeat mode</string>
     <string name="action_repeat_all">Repeat all songs</string>
     <string name="action_repeat_one">Repeat same track</string>
