--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,7 +17,10 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources>
-    <string name="permission_needed">Diese App benötigt Lese- und Schreib-Berechtigung auf den Gerätespeicher, um Lieder zu finden, anzuzeigen und abspielen! Bitte Zugriff auf Fotos und Medien erlauben, wenn das Betriebssystem darum bittet.</string>
+    <string name="permission_needed">Diese App benötigt Lese Berechtigung auf den
+    Gerätespeicher, um Lieder zu finden, anzuzeigen und abspielen!
+    Bitte Zugriff auf Fotos und Medien erlauben, wenn das Betriebssystem darum bittet.</string>
+    <!-- - und Schreib- -->
 
     <string name="action_settings">Einstellungen</string>
     <string name="advanced_settings_title">Erweiterte Einstellungen</string>
