--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -116,8 +116,8 @@
     <string name="settings_source_title">Изворни кôд</string>
     <string name="settings_licence_title">Лиценца</string>
     <string name="settings_licence">ГПЛв3</string>
-    <string name="settings_donate_title">Донација</string>
-    <string name="settings_donate_summary">Кликните овде ако би вам живот био тежак без ове апликације.</string>
+    <string name="donate_title">Донација</string>
+    <string name="donate_summary">Кликните овде ако би вам живот био тежак без ове апликације.</string>
 
     <string name="settings_thanks">Посебне захвале</string>
     <string name="settings_thanks_icons">Иконе</string>
