--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,7 @@
     <string name="settings_version">1.9.1</string>
 
     <string name="permission_needed">The app needs read storage permission in order to show songs
-        and play them !
-        When asked, please allow access to photos and multimedia content on your android device.
+        and play them !\n\nWhen asked, please allow access to photos and multimedia content on your android device.
     </string>
     <!-- and write storage permissions -->
 
@@ -192,9 +191,11 @@
     <string name="settings_source">https://gitlab.com/souch/SMP</string>
     <string name="settings_licence_title">License</string>
     <string name="settings_licence">GPLv3</string>
-    <string name="settings_donate_title">Donate</string>
-    <string name="settings_donate_summary">If you like the app, donate to reward me for the hard work !</string>
-    <string name="show_donate_disabled">Show donate disabled</string>
+    <string name="donate_title">Donate</string>
+    <string name="donate_summary">If you like the app, donate to reward me for the hard work !</string>
+    <string name="buy_pro_summary">If you like the app, donate or buy the pro version to reward me for the hard work !</string>
+    <string name="show_donate_disabled">Show donate popup disabled</string>
+    <string name="close">Close</string>
 
     <string name="settings_thanks">Special thanks</string>
     <string name="settings_thanks_icons">Icons</string>
