Improve set rating dialog, rating to song other than current, long click always show context menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,11 +39,17 @@
     <string name="action_music_mode">Music mode</string>
     <string name="action_edit_mode">Edit mode</string>
 
-    <string name="action_rate_group">rate every song</string>
-    <string name="action_rate_group_overwrite">rate every song overwrite already rated</string>
+    <string name="ic_action_edit_folder">folder: %s</string>
+    <string name="ic_action_edit_song">song: %s</string>
+
+    <string name="action_rate_group">rate every song (keep)</string>
+    <string name="action_rate_group_overwrite">rate every song (overwrite)</string>
+
+    <string name="action_rate_song">rate song</string>
 
     <string name="action_min_rating">Play songs with rating >=</string>
-    <string name="action_set_rating">Set "%s" ratings to</string>
+    <string name="action_set_rating_folder">Set ratings for folder: %s</string>
+    <string name="action_set_rating_song">Set rating for song: %s</string>
 
     <string name="songs_have_been_rated">%d ratings has been applied</string>
 
