--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,10 @@
 
     <string name="action_rate_song">rate song</string>
 
+    <string name="action_rescan">rescan</string>
+    <string name="start_rescan">Start rescan: </string>
+    <string name="rescanned">Rescanned: </string>
+
     <string name="action_delete_song">delete song</string>
     <string name="action_ask_delete_song">Do you really want to delete %s ?</string>
     <string name="action_delete_song_ok">Delete song %s succeed.</string>
