if show filename disabled: sort by track number and by filename if no track number found; if show filename enabled: sort by filename only; show track number in the list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
     <string name="popup_song_artist">artist: %s</string>
     <string name="popup_song_album">album: %s</string>
     <string name="popup_song_title">title: %s</string>
+    <string name="popup_song_track">track: %d</string>
     <string name="popup_song_year">year: %d</string>
     <string name="popup_song_rating">rating: %d</string>
     <string name="popup_song_mime">mime: %s</string>
