--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -44,13 +44,13 @@
     <string name="action_rate_group">évaluer chaque chanson (conserver)</string>
     <string name="action_rate_group_overwrite">évaluer chaque chanson (remplacer)</string>
 
-    <string name="action_rate_song">évaluer une chanson</string>
+    <string name="action_rate_song">noter</string>
 
     <string name="action_rescan">rescanner</string>
     <string name="start_rescan">Démarrage du scan : </string>
     <string name="rescanned">Rescanné : </string>
 
-    <string name="action_delete_song">supprimer la chanson</string>
+    <string name="action_delete_song">supprimer</string>
     <string name="action_ask_delete_song">Voulez-vous vraiment supprimer %s ?</string>
     <string name="action_delete_song_ok">Chanson %s supprimée.</string>
     <string name="action_delete_song_nok">Suppression de la chanson %s échouée !</string>
@@ -60,8 +60,8 @@
     <string name="action_set_rating_song">Évaluer la chanson : %s</string>
     <string name="action_set_rating_song_failed">Annulation de l\'évaluation : déjà en cours</string>
 
-    <string name="songs_have_been_rated">L\'évaluation %d a été appliqué</string>
-    <string name="current_rating_idx">évaluation actuelle</string>
+    <string name="songs_have_been_rated">%d notes ont été appliqué</string>
+    <string name="current_rating_idx">note actuelle</string>
 
     <!--Below which "min rating" do we play song with rating not initialized (e.g. if 5 we play always song not initiliazed) -->
     <string name="uninitialized_default_rating">Valeur par défaut des chansons non encore évaluées</string>
