--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,7 +158,8 @@
     <string name="settings_text_size_ratio">Group/song ratio text size</string>
     <string name="settings_text_size_ratio_default">1.1</string>
 
-    <string name="settings_ratings_not_written_title">Show ratings not written to file</string>
+    <string name="settings_ratings_not_written_title">Show ratings</string>
+    <string name="settings_ratings_not_written">Show ratings not written to file</string>
     <string name="settings_ratings_are_in_sync">Every songs rating have been written</string>
 
     <string name="settings_rescan_title">Rescan</string>
