--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -266,6 +266,9 @@
     <string name="settings_show_remaining_time">Afficher le temps restant</string>
     <string name="settings_show_remaining_time_summary">Afficher le temps restant plutôt que le temps de lecture écoulé</string>
 
+    <string name="settings_hide_navigation_bar">Cache la barre de navigation</string>
+    <string name="settings_hide_navigation_bar_summary">Cache automatiquement la barre de navigation</string>
+
     <string name="action_repeat_title">Mode de répétition</string>
     <string name="action_repeat_all">Répéter toutes les chansons</string>
     <string name="action_repeat_one">Répéter la même chanson</string>
