--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -167,4 +167,5 @@
     <string name="action_repeat_all">Alle</string>
     <string name="action_repeat_one">Lied</string>
     <string name="action_repeat_group">Gruppe</string>
+    <string name="action_genius_lyrics">Auf genius.com suchen</string>
 </resources>
